--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -5,15 +5,19 @@
   gap: var(--spacing-400);
 }
 
-
 .cards .card-click {
   cursor: pointer;
 }
 
 .cards .card-captioned {
   font-size: 0.875em;
-  letter-spacing: 0.1em;
+  font-weight: 500;
+  letter-spacing: var(--letter-spacing-m);
   text-transform: uppercase;
+}
+
+.cards .card-captioned .img-wrapper {
+  margin-bottom: var(--spacing-100);
 }
 
 .cards .card-image {
