--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -132,8 +132,8 @@
 /* expansion variant */
 .carousel-wrapper.expansion-wrapper {
   position: relative;
-  background-color: var(--color-gray-100);
   padding: var(--spacing-600) 0;
+  background-color: var(--color-gray-100);
   text-align: center;
   overflow-x: hidden;
 }
@@ -169,7 +169,7 @@
 .carousel.expansion .expansion-timer {
   width: 50px;
   height: 5px;
-  margin: var(--spacing-100) auto;
+  margin: var(--spacing-400) auto var(--spacing-80);
 }
 
 .carousel.expansion .expansion-timer::before {
@@ -189,13 +189,9 @@
   to { width: 100%; }
 }
 
-.carousel.expansion .expansion-timer + h2,
-.carousel.expansion .expansion-timer + h3 {
-  margin-top: var(--spacing-200);
-}
-
 .carousel.expansion ul {
-  margin: 0 50px
+  margin: auto;
+  width: calc(100% - 64px);
 }
 
 .carousel.expansion ul > li {
@@ -217,6 +213,14 @@
 
 .carousel.expansion ul > li p {
   line-height: var(--line-height-xl);
+}
+
+.carousel.expansion ul > li h3 + p {
+  margin-top: var(--spacing-400);
+}
+
+.carousel.expansion ul > li strong {
+  font-weight: 500;
 }
 
 .carousel.expansion nav button.nav-arrow {
