--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,3 +1,8 @@
+main > .hero-container.section {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .hero-container .hero-wrapper {
   margin: 0;
   padding: 0;
