--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,7 +111,7 @@ body {
   color: var(--color-text);
   font-family: var(--body-font-family);
   font-size: var(--body-size-m);
-  font-weight: 300;
+  font-weight: 400;
   line-height: var(--line-height-m);
 }
 
@@ -132,13 +132,11 @@ main {
   max-width: var(--site-width);
   background-color: var(--layer-base);
   padding-bottom: var(--spacing-500);
-  /* margin: 0 var(--horizontal-spacing); */
   margin-top: var(--nav-banner-height);
 }
 
 @media (width >= 900px) {
   main {
-    /* max-width: calc(100% - (2 * var(--horizontal-spacing))); */
     margin: 0 auto;
   }
 }
@@ -156,35 +154,19 @@ main > .section {
   scroll-margin: 100px 0;
 }
 
-main > .section.hero-container {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
 main > .section > div {
   margin: var(--horizontal-spacing) auto;
   padding: 0 var(--horizontal-spacing);
 }
 
-main > .section.banner > div {
-  padding: 0;
-}
-
-main > .section.navigation-container {
-  margin-top: 0;
-}
-
-main > .section.navigation-container > div {
-  padding: 0;
-  margin: 0;
-}
-
 /* section metadata */
-main .section[data-collapse="top"] {
+main .section[data-collapse='top'],
+main .section[data-collapse='both'] {
   margin-top: 0;
 }
-
-main .section[data-collapse="bottom"] {
+  
+main .section[data-collapse='bottom'],
+main .section[data-collapse='both'] {
   margin-bottom: 0;
 }
 
@@ -192,11 +174,27 @@ main .section.light,
 main .section.dark {
   margin: 0;
   padding-top: var(--spacing-80);
-  padding-bottom: var(--spacing-80);
+  padding-bottom: var(--spacing-20);
 }
 
 main .section.light {
   background-color: var(--color-gray-100);
+}
+
+main .section[data-background] {
+  position: relative;
+}
+
+main .section[data-background] picture.section-background-image {
+  position: absolute;
+  inset: 0;
+}
+
+main .section[data-background] picture.section-background-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 main .section.banner {
@@ -212,6 +210,10 @@ main .section.banner {
   text-align: center;
 }
 
+main .section.banner.overlay {
+  min-height: 480px;
+}
+
 main .section.banner.overlay::before {
   content: '';
   position: absolute;
@@ -220,10 +222,8 @@ main .section.banner.overlay::before {
   opacity: 0.35;
 }
 
-main .section.banner > div {
-  display: unset;
-  z-index: 1;
-  max-width: 70vw;
+main > .section.banner > div {
+  padding: 0;
 }
 
 @media (width >= 800px) {
@@ -236,20 +236,16 @@ main .section.banner > div {
   }
 }
 
-.section[data-background] {
-  position: relative;
+main .section.banner,
+main .section.banner > div {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.section[data-background] picture.section-background-image {
-  position: absolute;
-  inset: 0;
-}
-
-.section[data-background] picture.section-background-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
+main .section.banner > div {
+  display: unset;
+  z-index: 1;
+  max-width: 70vw;
 }
 
 /* images and icons */
@@ -336,12 +332,16 @@ h6 {
   margin-bottom: var(--spacing-60);
   color: var(--color-red);
   font-size: 11px;
-  letter-spacing: 0.1em;
+  letter-spacing: var(--letter-spacing-m);
   text-transform: uppercase;
 }
 
 [data-eyebrow] {
   margin-top: 0;
+}
+
+strong {
+  font-weight: 700;
 }
 
 p,
